--- a/api/.env
+++ b/api/.env
@@ -1,2 +1,2 @@
 PORT = 5000
-MONGO_URL = mongodb+srv://idearcos:Isadarc111@cluster0.z767w.mongodb.net/adidasDB?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://idearcos:gHVASGy1e90Rb4VT@cluster0.z767w.mongodb.net/adidasDB?retryWrites=true&w=majority
